--- a/index.html
+++ b/index.html
@@ -8,41 +8,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
-  <!-- Menu bar and navigation menu below -->
-  <header>
-      <img id="logo" src="">
-      <nav id="nav-menu">
-          <ul>
-              <li><a href="#random-info">Random Information</a></li>
-              <li><a href="#quote">Quote</a></li>
-              <li><a href="#sign-up">Sign up</a></li>
-          </ul>
-      </nav>
-  </header>
   <body>
-    <!-- Hero image below -->
-	<hero>
-        <h1 id="hero-title">This website is awesome</h1>
+    <!-- Hero section below including menu -->
+	<div class="hero">
+        <img id="logo" src=""><figcaption>Logo</figcaption>
+        <nav id="nav">
+          <ul id="nav-list">
+              <li class="nav-item"><a href="#random-info">Random Information</a></li>
+              <li class="nav-item"><a href="#quote">Quote</a></li>
+              <li class="nav-item"><a href="#sign-up">Sign up</a></li>
+          </ul>
+        </nav>
+        <h1 id="hero-main-text">This website is awesome</h1>
         <p id="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <img id="hero-image" src="">
         <button type="button">Sign up</button>
-    </hero>
+    </div>
     <!-- Mid section starts here-->
-    <article id="random-info">
+    <div id="random-info">
         <h3>Some random information.</h3>
-        <img id="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
-        <img id="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
-        <img id="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
-        <img id="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
-    </article>
+        <img class="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
+        <img class="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
+        <img class="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
+        <img class="images" src="" alt=""><figcaption>this is some subtext under an illustration or image</figcaption>
+    </div>
 <!-- Inspiring quote section -->
-    <article id="quote">
-
-    </article>
+    <div id="quote">
+        <blockquote>
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <cite>Thor, God of Thunder</cite>
+        </blockquote>
+    </div>
 <!-- Call to action section-->
-    <article id="action">
+    <div id="action">
 
-    </article>
+    </div>
 <!-- Footer section -->
     <footer>
         <p>Copyright &#169; Adam Chapman 2022</p>
