--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- hero image -->
 
             <div class="hero-image">
-                <img src="">
+                <img src="https://img.search.brave.com/n_7Na5u1cTnGgFlaTzG4dzHn_SVQwlBbuVtyAJKPC7o/rs:fit:960:720:1/g:ce/aHR0cHM6Ly9jZG4u/cGl4YWJheS5jb20v/cGhvdG8vMjAxNS8x/MS8xNi8xNi80MS93/ZWItMTA0NTk5NF85/NjBfNzIwLmpwZw">
             </div>
         </div>
     </div>
